--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .loginform{
     background-color: #f9fafb;
     font-family: "open sans",sans-serif;
